crates/toml/tests/snapshots/invalid/encoding/bom-not-at-start-02.stderr
TOML parse error at line 1, column 3
  |
1 | ﻿﻿# Contains two UTF-8 BOMS at the start
  |   ^
key with no value, expected `=`

---
TOML parse error at line 1, column 4
  |
1 | ﻿﻿# Contains two UTF-8 BOMS at the start
  |    ^^^
invalid unquoted key, expected letters, numbers, `-`, `_`
